feat: ajustando locais de factory